@@ -1,3 +1,9 @@
+2006-12-28  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* Fix: src/kahua-package
+	  "generate" sub command now handle --creator=... and --mail=...
+	  option properly.
+
 2006-12-27  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* Change: kahua.el.in
